[gd_scene load_steps=6 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://UbuntuMono-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Score" type="Label" parent="."]
margin_left = 786.0
margin_top = 496.0
margin_right = 1010.0
margin_bottom = 587.0
custom_fonts/font = SubResource( 1 )
text = "Clones: 0"
align = 2
valign = 2
clip_text = true

[node name="Message" type="Label" parent="."]
margin_left = 176.0
margin_top = 1.0
margin_right = 859.0
margin_bottom = 282.0
custom_fonts/font = SubResource( 2 )
text = "Game Over"
align = 1
valign = 1
autowrap = true

[node name="Start" type="Button" parent="."]
margin_left = 443.0
margin_top = 292.0
margin_right = 593.0
margin_bottom = 312.0
text = "Play"

[node name="Menu" type="Button" parent="."]
margin_left = 443.0
margin_top = 387.0
margin_right = 594.0
margin_bottom = 408.0
text = "Menu"

[node name="Instructions" type="Button" parent="."]
margin_left = 443.0
margin_top = 322.0
margin_right = 594.0
margin_bottom = 345.0
text = "Instructions"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Credits" type="Button" parent="."]
margin_left = 444.0
margin_top = 356.0
margin_right = 594.0
margin_bottom = 376.0
text = "Credits"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MusicSwitch" type="Button" parent="."]
margin_left = 935.0
margin_top = 6.0
margin_right = 1019.0
margin_bottom = 26.0
text = "Music ON"

[node name="Controls" type="Label" parent="."]
margin_left = 269.0
margin_top = 241.0
margin_right = 773.0
margin_bottom = 376.0
custom_fonts/font = SubResource( 3 )
text = "Move Left: Left Arrow key
Move Right: Right Arrow key
Jump: Up Arrow key"
align = 1
valign = 1
autowrap = true

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Instructions" to="." method="_on_Instructions_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="MusicSwitch" to="." method="_on_MusicSwitch_pressed"]
